# offprint

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  debug_stanford.py  pyproject.toml
.github/workflows/: quality.yml
archive/research-diagnostics/: diag_chars.py  diag_font_pathology2.py  diag_fp_inspection.py  (+1 more)
config/: adapters.yml
docs/: ADAPTER_DEVELOPMENT.md  ARCHITECTURE.md  CONTRIBUTOR_START_HERE.md  DATA_AND_RELEASE_POLICY.md  DEVELOPER_WORKFLOW.md  DIGITAL_COMMONS_FILE_ACCESS.md  FOOTNOTE_FULL_CORPUS_AUDIT.md  GAZETTEER.md  GITHUB_REPOSITORY_ROADMAP.md  INVENTORY.md  JOURNAL_RECONNAISSANCE_ROADMAP.md  JOURNAL_RECONNAISSANCE_WAVE_1.md  ONBOARDING_PLAYBOOK.md  OPERATIONS.md  OPERATOR_PLAYBOOK.md  PROJECT_OVERVIEW.md  README.md  REPO_LAYOUT.md  footnote_next_agent_guide.md  full_corpus_audit_roadmap.md
offprint/: README.md  __init__.py  browser_fallback.py  cli.py  command_cli.py  cooldown_integration.py  cooldown_state.py  digital_commons_download.py  digital_commons_enumerator.py  doctor.py  enumerate_universe.py  gazetteer.py  holdings.py  http_cache.py  legacy_manifest.py  mcp_browser_download.py  orchestrator.py  path_policy.py  playwright_session.py  polite_requests.py  retry_queue.py  run_types.py  seed_canonicalizer.py  seed_catalog.py  seed_quality.py  site_fingerprinter.py  sitemaps.py  url_classifier.py
references/: onboarding-selector-pagination-tracker.csv
scripts/: README.md  auto_onboard_site.py  build_hf_dataset.py  check_no_generic_active_seeds.py  check_repo_layout.py  evaluate_footnotes.py  export_footnote_dataset.py  extract_footnotes.py  extract_footnotes_from_docling.py  extract_pdf_metadata.py  extract_text_jsonl.py  fingerprint_site.py  metadata_quality_report.py  promote_run.py  qc_quarantine_pdfs.py  run_olmocr_dual_gpu.py  run_pipeline.py  site_status_report.py  smoke_one_pdf_per_site.py
tests/: conftest.py  test_citation_enrichment.py  test_cosmetic_non_monotonic.py  test_dedupe_articles.py  test_digital_commons_download.py  test_digital_commons_enumeration_mode.py  test_doc_policy.py  test_export_footnote_dataset.py  test_gazetteer.py  test_generic_download_dedup.py  test_holdings.py  test_html_gold.py  test_imports.py  test_issue_splitter.py  test_liteparse_candidate_selection.py  test_note_ordering.py  test_note_segment_plain_text.py  test_note_segment_quality_guards.py  test_ocr_footnote_extract.py  test_ojs_adapter.py  test_ordinality_honest.py  test_prioritize_journal_recon.py  test_quartex.py  test_registry_routing.py  test_repository_docs.py  test_sequence_solver.py  test_text_extract_liteparse.py  test_validate_journal_recon.py
(+2190 files in other folders)
