[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offprint"
version = "0.1.0"
description = "Pipeline for crawling law-journal sites and producing research-ready PDF, text, and citation data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Offprint Contributors"}
]
keywords = ["scraping", "law", "legal", "academic", "pdf", "metadata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup :: HTML",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "responses>=0.23.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
pdf_footnotes = [
    "pdfplumber>=0.11.0",
    "pdfminer.six>=20231228",
    "pymupdf>=1.24.0",
    "docling>=2.78.0; python_version >= '3.10'",
    "olmocr>=0.2.0",
    "eyecite>=2.6.0",
    "spacy>=3.7.0",
    "pypdf>=4.0.0",
    "opendataloader-pdf>=0.3.0; python_version >= '3.10'",
]
hf = [
    "pyarrow>=14.0.0",
]

[project.urls]
"Homepage" = "https://github.com/dbateyko/law-review-scrapers"
"Bug Reports" = "https://github.com/dbateyko/law-review-scrapers/issues"
"Source" = "https://github.com/dbateyko/law-review-scrapers"

[project.scripts]
offprint = "offprint.orchestrator:main"
offprint-cli = "offprint.command_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["offprint*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = [
    "artifacts",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # allow import-after-path-bootstrap patterns in scripts
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
